Shorten text in intro/syntax sections

--- a/100-math-description/GR-sslcm-math-description.Rmd
+++ b/100-math-description/GR-sslcm-math-description.Rmd
@@ -65,53 +65,42 @@ library(kableExtra)
 
 # Model Overview
 
-The purpose of the state-space life cycle model for Grande Ronde spring Chinook salmon is to synthesize the abundant and diverse biological data sets that have been collected as part of routine monitoring programs into a self-contained and internally consistent population dynamics model.
+The purpose of the state-space life cycle model for Grande Ronde spring Chinook salmon is to synthesize data sets that have been collected as part of routine monitoring programs into a self-contained and internally consistent population dynamics model.
 Such a synthesis can provide richer insights about unobserved quantities (e.g., total parr recruitment abundance) and the relationships between them than allowed by more piecemeal analyses.
-Further, because the model estimates expected values and the magnitude of inter-annual variability in a time series framework, the output will be useful for structuring simulation models of future population dynamics.
-These simulation exercises will ultimately allow decision-makers to posit plausible future states of nature (e.g., climate change) or management strategies (e.g., habitat restoration or harvest policies) and to receive a distribution of possible future outcomes weighted by their probability of occurrence as suggested by historical population dynamics.
-The outputs of those analyses will be useful in decision frameworks that seek to prioritize certain actions over others, while helping to set reasonable expectations for what might likely occur in the face of future challenges.
+Further, because the model estimates expected values and the magnitude of inter-annual variability in a time series framework, the output will be useful for structuring simulation models of future population dynamics to evaluate different management strategies.
 Although this is the ultimate goal and purpose of developing the state-space life cycle model described herein, we do not discuss this concept further, as it is beyond the scope of the statistical population dynamics model, which is the topic of this document.
 
-The state-space life cycle model tracks the fates of $n_y$ cohorts of fish from egg to adulthood within a statistical population dynamics model.
-The model is fundamentally statistical because it receives input data in the form of empirical observations (or externally derived estimates informed by empirical observations, with uncertainty in the external estimation propagated to this model) and estimates unknown parameters that must be internally consistent with the data and one another.
-The model is considered "state-space" because it captures two discrete types of variability: (_i_) process noise, i.e., variability in the biological and environmental processes that give rise to latent (i.e., true but unobserved) population dynamics and outcomes and (_ii_) observation error, i.e., variability in the measurement processes that result in the observed data representing an imperfect (but generally unbiased) perception of the true states and transitions among them.
-As such, the model is inherently a time series model: spawners in one year produce eggs, which then become parr, then smolt, ocean juveniles, and ultimately spawners in future years -- along this life cycle, it is the same pool of fish at one life stage that is decremented (via survival rate transition probabilities) to become a pool of fish at a later stage of the life cycle.
-
-Furthermore, the model has several dimensions and the majority of processes are assumed to operate differently (i.e., have varying numerical values) along each dimension.
-One dimension is age structure: anadromous Chinook salmon in the Grande Ronde basin return predominately as age-3, age-4, or age-5 adults, these outcomes are mutually exclusive but can occur for any fish from a given cohort.
-This important feature of Chinook salmon life history means monitoring activities in one year of adult returns sample fish that are progeny from from 3 consecutive brood (i.e., i.e., spawning) years; due to the resulting time linkages in the data this creates, it is essential that our model account for it.
-Another dimension is origin structure: adults returning in any given year may be the result of either natural spawning/rearing in the wild or via captive spawning/rearing in a hatchery setting.
-Critical outputs of the model are productivity (i.e., fish produced per fish) and capacity (i.e., declining productivity with increasing density) which makes it crucial that we track the fates of naturally and hatchery produced fish separately.
-Among naturally produced juveniles, an additional dimension is migratory strategy structure: some individuals rear over their first winter as free-swimming juveniles in the headwaters near where they were spawned, while others migrate to areas lower in the basin to rear overwinter; regardless, all individuals migrate out to sea the following spring as age-2 smolt.
-This phenological life history complexity is important to capture because these two groups of fish are monitored separately and they may have different survival outcomes while inhabiting heterogeneous habitats. 
-A final dimension is population structure: there are several tributaries within the Grande Ronde basin that support spawning Chinook salmon, and local environmental conditions and genetic adaptations may result in their population dynamics differing in terms of productivity, capacity, or overall life cycle fitness.
-Four tributaries, which we consider to be distinct spawning populations, have been monitored using largely consistent methods for nearly three decades; these include Catherine Creek, Lostine River, Minam River, and Upper Grande Ronde River.
-Although we model their population dynamics separately, it is also reasonable to expect that these populations should show some level of synchronicity in the conditions they face and the resulting production and survival outcomes. 
-Thus, wherever possible we attempt to capture the covariability among population-specific dynamics.
-
-The model is framed in the Bayesian mode of inference, as it is intuitive for the necessary integration over the many layers of uncertainty (i.e., process vs. observational variability).
-Further, Bayesian inference provides an intuitive framework to constrain population dynamics parameters to take on only biologically plausible values through the use of prior information -- we intentionally employ nearly exclusively uninformative prior information, but in several rare cases we were required to bring in auxiliary information in the form of reasonably strong priors (Table \@ref(tab:param-table)).
-A final benefit of using the Bayesian framework is the seamless propagation of uncertainty from directly estimated parameters to derived quantities (of which there are many) -- all unknown quantities, either estimated parameters or deterministic functions of estimated parameters, receive a posterior distribution in the Bayesian framework.
-Due to the analytical intractability of the complexity of the model, we employ Markov Chain Monte Carlo methods (implemented via the JAGS probabilistic programming language) to sample from the joint posterior distribution of all unknown quantities in the model.
-
-We begin our description of the mathematical structure of the life cycle model with an overview of several syntax and statistical conventions we employ.
-In our mathematical representation of quantities in the model, we have striven for consistency, but this has created somewhat non-intuitive conventions which require devoted explanation.
-All quantities are defined (i.e., symbology and the specific equations that use them) in Tables \@ref(tab:index-table), \@ref(tab:symbol-table), \@ref(tab:param-table), and \@ref(tab:data-table) for reference and a catalog of all equations is provided in Table \@ref(tab:equation-table).
-
+The state-space life cycle model tracks the fates of multiple cohorts of fish from egg to adulthood within a statistical population dynamics model.
+The model receives input data in the form of empirical observations or pre-processed output from other models (e.g., to derive survival rates from PIT tag records) and estimates unknown parameters that must be internally consistent with the data and one another.
+The model is considered "state-space" because it captures two discrete types of variability: (_i_) process noise, i.e., variability in the biological and environmental processes that produce population dynamics and outcomes and (_ii_) observation error, i.e., variability in the measurement processes that result in the observed data representing an imperfect perception of the true value being measured.
+As such, the model is inherently a time series model: spawners in one year produce eggs, which move through several life stages and ultimately return as spawners in future years -- it is the same pool of fish at one life stage that is decremented (via survival rate transition probabilities) to become a pool of fish used in the calculations for a later stage of the life cycle.
 We have described the life cycle model calculations as divided into three distinct life "phases" (Figure \@ref(fig:diagram)): freshwater juvenile, ocean juvenile, and freshwater adult.
-For each life phase, we describe the process model dynamics as a set of stochastic and deterministic processes followed by how they are informed by empirical data as part of the observation model.
-Although we present these phases and model components in discrete sections, note that they are all components of a single integrated population dynamics model that is statistical in the sense that unknown quantities are estimated with uncertainty from input data.
+
+The model has several dimensions and the majority of processes are assumed to operate differently (i.e., have varying numerical values) along each dimension. These include:
+
+* **Age of Return** -- Anadromous Chinook salmon in the Grande Ronde basin return predominately as age-3, age-4, or age-5 adults. This means that monitoring activities in one year of adult returns sample fish that are progeny from from 3 consecutive brood (i.e., i.e., spawning) years, creating time linkages in the time series that are important to account for.
+* **Origin** -- Adults returning in any given year may be the result of either natural spawning/rearing in the wild or via captive spawning/rearing in a hatchery setting. These are critical to track separately because the productivity and capacity of naturally spawning salmon are key outputs of the model.
+* **Juvenile Migratory Strategy** -- Grande Ronde spring Chinook salmon juveniles exhibit two main phenological migratory strategies which may have different vital rates and require additional complexity in the observation model.
+* **Population** -- Four tributaries of the Grande Ronde River have been monitored using largely consistent methods for nearly three decades; these include Catherine Creek, Lostine River, Minam River, and Upper Grande Ronde River. We track the abundance and survival of each separately because they are monitored separately and local environmental conditions and/or genetic adaptations may result in population dynamics differing in terms of productivity, capacity, or overall life cycle fitness. 
+
+We used the Bayesian mode of inference to fit the model to data, as it is intuitive for the necessary integration over the many layers of uncertainty (i.e., process vs. observational variability).
+Further, Bayesian inference provides an intuitive framework to constrain parameters to take on only values known _a priori_ to be plausible -- we intentionally employ nearly exclusively uninformative prior information, but in several cases we were required to use auxiliary information in the form of reasonably strong priors (Table \@ref(tab:param-table)).
+An additional benefit of using the Bayesian framework is the seamless propagation of uncertainty from estimated parameters to derived quantities (of which there are many) -- all unknown quantities receive a posterior distribution.
+We employed Markov Chain Monte Carlo methods (implemented via the JAGS probabilistic programming language) to sample from the joint posterior distribution of all unknown quantities in the model.
 
 # Syntactical and Statistical Conventions
 
-* For simplicity, we use the term "adult" to refer to any mature individual returning to spawn -- this includes age-3 fish which are generally referred to as "jacks".
+We have striven for consistency in our mathematical representation of quantities in the model but this has created somewhat non-intuitive conventions which require devoted explanation.
+All quantities are defined (i.e., symbology and the specific equations that use them) in Tables \@ref(tab:index-table), \@ref(tab:symbol-table), \@ref(tab:param-table), and \@ref(tab:data-table) for reference and a catalog of all equations is provided in Table \@ref(tab:equation-table).
+
+* For simplicity, we use the term "adult" to refer to any mature individual returning to spawn including age-3 "jacks".
 * Life stage-specific states are defined by capital letters, e.g., parr ($P$), smolt ($M$), or spawners ($S$)
 * Parameters (e.g., survival terms, non-survival transition probabilities, coefficients in relationships, etc.) are denoted by Greek symbols, e.g., $\phi$ for survival rates or $\psi$ for maturation rates.
-* Subscripts denote the structure of a quantity, e.g., $y$ denotes a specific year and $j$ a specific population.
+* Subscripts denote the index of a quantity, e.g., $y$ denotes a specific year and $j$ a specific population (see Table \@ref(tab:index-table)).
 * We use the convention $b$ to indicate "before event" and $a$ to indicate "after event" for a quantity that occurs at the same life stage. E.g., $M^{b}$ represents smolt abundance _before_ out-of-basin migration and $M^{a}$ represents smolt abundance _after_ out-of-basin migration. As such, superscripts are most often used syntactically, not mathematically. E.g., $M^{b}$ is not "$M$ raised to the power $b$"; if we must raise the quantity $M^{b}$ to the power $c$, it will be written $(M^{b})^c$.
 * Survival terms to transition from state $A$ to state $B$ in year $y$ for population $j$ are denoted by $\phi^{A \rightarrow B}_{y,j}$.
-* Most terms vary annually to capture process noise in population dynamics. We denote the deterministic (i.e., expected) value in the absence of process noise with a dot, e.g., $\dot{\phi}^{A \rightarrow B}_j$. We use the term "deterministic" in the sense that it is the expected value for a stochastic (i.e., with process noise) quantity; the deterministic quantity still has a posterior probability density function.
-* In some cases, we specify calculations performed on vectors rather than scalars (i.e., a scalar being a single element from a vector or higher-dimensional array). Vectors are denoted via boldface, and the dimension of the vector is denoted using 1:$n$ syntax. E.g., $\boldsymbol{\phi}^{A \rightarrow B}_{y,1:n_j}$ represents a vector of survival terms from state $A$ to state $B$ in year $y$, where each element of the vector represents the value for a given population.
+* We denote the expected value of a stochastic process with a dot, e.g., $\dot{\phi}^{A \rightarrow B}_j$ -- this is the value expected in the absence of process variability.
+* In some cases, we specify calculations performed on vectors rather than scalars (i.e., a scalar being a single element from a vector or higher-dimensional array). Vectors are denoted via boldface, and the dimension of the vector is denoted using 1:$n$ syntax. E.g., $\boldsymbol{\phi}^{A \rightarrow B}_{y,1:n_j}$ represents a vector of survival terms from state $A$ to state $B$ in year $y$, where each element of the vector represents the value for each population.
 * Mathematical operations performed on two vectors $\boldsymbol{C}$ and $\boldsymbol{D}$ are performed in an element-wise fashion, and the resulting vector will have identical dimensions to both $\boldsymbol{C}$ and $\boldsymbol{D}$.
 * In some cases, a calculation is performed differently for a subset of the possible index values. For example, to denote that $k$ should take on only the values of 1 and 3 (not 2), we would write, $k \in [1,3]$.
 * $\log\left(x\right)$ represents the natural logarithm of $x$ and it is implied that the constraint $x > 0$ is satisfied.
